Updated changelog and fixtures map

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,10 +7,15 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixtures: Stairville DCL Flat Par 18x4W CW/WW, Cameo LED MultiPAR CLM-PAR-COB1 (thanks to Freasy)
   * New fixture: iSolution iColor 4 (thanks to withlime)
   * New fixtures: ETC ColorSource Spot, American DJ Chameleon QBar Pro, American DJ Vizi Beam RXONE (thanks to Robert Box)
+  * New fixtures: Blizzard Lighting LB-Par Hex (thanks to Robert Box)
   * New fixture: JB-Lighting Varyscan P6 (thanks to Andres Robles)
   * New fixture: Chauvet RotoSphere LED (thanks to Carl Eisenbeis)
   * New fixture: Briteq Spectra 3D Laser (thanks to Robert Box + Freasy)
   * New fixture: Martin MH2 Wash (thanks to John Yiannikakis + Freasy)
+  * New fixture: American DJ Flat Par Tri7X (thanks to Brian)
+  * New fixture: Ledj Stage Color 24, 59 7Q5 RGBW, 59 7Q5 RGBA (thanks to Paul Wilton)
+  * New fixtures: American DJ Inno Spot Elite, American DJ Stinger (thanks to Piotr Nowik)
+  * New fixture: Blizzard Lighting Rocklite RGBAW (thanks to Larry Wall)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Sep 2016 12:13:14 +0200
 
