--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixtures: Ledj Stage Color 24, 59 7Q5 RGBW, 59 7Q5 RGBA (thanks to Paul Wilton)
   * New fixtures: American DJ Inno Spot Elite, American DJ Stinger, Showtec Phantom 95 LED Spot (thanks to Piotr Nowik)
   * New fixture: Blizzard Lighting Rocklite RGBAW (thanks to Larry Wall)
+  * New fixture: American DJ Comscan LED (thanks to Chris)
+  * New fixture: PR Lighting XL 250 PR-2225M (thanks to István Király)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Sep 2016 12:13:14 +0200
 
