resources: 1 new fixture and 1 updated

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixture: iSolution iColor 4 (thanks to withlime)
   * New fixtures: ETC ColorSource Spot, American DJ Chameleon QBar Pro, American DJ Vizi Beam RXONE (thanks to Robert Box)
   * New fixtures: Blizzard Lighting LB-Par Hex, American DJ XS 600 (thanks to Robert Box)
-  * New fixture: JB-Lighting Varyscan P6 (thanks to Andres Robles)
+  * New fixture: JB-Lighting Varyscan P6, Cameo Wookie series (thanks to Andres Robles)
   * New fixture: Chauvet RotoSphere LED (thanks to Carl Eisenbeis)
   * New fixture: Briteq Spectra 3D Laser (thanks to Robert Box + Freasy)
   * New fixture: Martin MH2 Wash (thanks to John Yiannikakis + Freasy)
