--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixture: American DJ Comscan LED (thanks to Chris)
   * New fixture: PR Lighting XL 250 PR-2225M (thanks to István Király)
   * New fixtures: Equinox Ultra Scan LED, Kam Powercan84W, QTX HZ-3 (thanks to Chris Moses)
+  * New fixture: Eurolite TMH-10 (thank to exmatrikulator)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Sep 2016 12:13:14 +0200
 
