--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ qlcplus (4.10.5) stable; urgency=low
   * UI/RGB Matrix Editor: editor preview doesn't stop when testing the Function
   * UI/Collection Editor: allow multiple selection and added Function reordering buttons
   * UI/Remap: fixed universes list in target mapping
-  * VC Frame: Show page number when collapsed (thanks to Matthias Gubisch)
-  * VC Cue List: allow to choose playback buttons layout (Play/Pause + Stop or Play/Stop + Pause)
+  * UI/Reamp: fixed wrong Scene remapping when mixing cloned and new fixtures
+  * Virtual Console/Frame: Show page number when collapsed (thanks to Matthias Gubisch)
+  * Virtual Console/Cue List: allow to choose playback buttons layout (Play/Pause + Stop or Play/Stop + Pause)
   * Plugins/DMX USB: fixed crash happening on PRO devices when receiving a full universe
   * New fixtures: Pro-Lights LumiPIX 12Q, Proel PLLEDMLBG (thanks to Andrea Ugolini)
   * New fixtures: Stairville DCL Flat Par 18x4W CW/WW, Cameo LED MultiPAR CLM-PAR-COB1, High End Systems Studio Beam (thanks to Freasy)
