--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qlcplus (4.10.5) stable; urgency=low
 
   * Engine: added indigo to fixture channel colors (thanks to Axel Metzke)
+  * Engine: properly handle RGB Matrices with generic dimmers (Jano Svitok)
   * UI/RGB Matrix Editor: editor preview doesn't stop when testing the Function
   * UI/Collection Editor: allow multiple selection and added Function reordering buttons
   * UI/Remap: fixed universes list in target mapping
