--- a/debian/changelog
+++ b/debian/changelog
@@ -15,20 +15,27 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixtures: Pro-Lights LumiPIX 12Q, Proel PLLEDMLBG (thanks to Andrea Ugolini)
   * New fixtures: Stairville DCL Flat Par 18x4W CW/WW, Cameo LED MultiPAR CLM-PAR-COB1, High End Systems Studio Beam (thanks to Freasy)
   * New fixture: iSolution iColor 4 (thanks to withlime)
-  * New fixtures: ETC ColorSource Spot, American DJ Chameleon QBar Pro, American DJ Vizi Beam RXONE (thanks to Robert Box)
-  * New fixtures: Blizzard Lighting LB-Par Hex, American DJ XS 600 (thanks to Robert Box)
-  * New fixture: JB-Lighting Varyscan P6, Cameo Wookie series (thanks to Andres Robles)
+  * New fixtures: ETC ColorSource Spot, Blizzard Lighting LB-Par Hex (thanks to Robert Box)
+  * New fixtures: American DJ: Chameleon QBar Pro,DJ Vizi Beam RXONE, XS 600, Focus Spot Three Z (thanks to Robert Box)
+  * New fixture: JB-Lighting Varyscan P6, Cameo Wookie series, Cameo Hydrabeam series (thanks to Andres Robles)
   * New fixture: Chauvet RotoSphere LED (thanks to Carl Eisenbeis)
   * New fixture: Briteq Spectra 3D Laser (thanks to Robert Box + Freasy)
   * New fixture: Martin MH2 Wash (thanks to John Yiannikakis + Freasy)
   * New fixture: American DJ Flat Par Tri7X (thanks to Brian)
   * New fixtures: Ledj Stage Color 24, 59 7Q5 RGBW, 59 7Q5 RGBA (thanks to Paul Wilton)
-  * New fixtures: American DJ Inno Spot Elite, American DJ Stinger, Showtec Phantom 95 LED Spot (thanks to Piotr Nowik)
+  * New fixtures: American DJ: Inno Spot Elite, Stinger, Tri Phase (thanks to Piotr Nowik)
+  * New fixtures: Showtec Phantom 95 LED Spot, Futurelight PHS-260 (thanks to Piotr Nowik)
   * New fixture: Blizzard Lighting Rocklite RGBAW (thanks to Larry Wall)
   * New fixture: American DJ Comscan LED (thanks to Chris)
   * New fixture: PR Lighting XL 250 PR-2225M (thanks to István Király)
   * New fixtures: Equinox Ultra Scan LED, Kam Powercan84W, QTX HZ-3 (thanks to Chris Moses)
   * New fixture: Eurolite TMH-10 (thank to exmatrikulator)
+  * New fixture: Eurolite LED SLS 5 BCL, Robe Fog 1500 FT (thanks to Christian Hollbjär)
+  * New fixture: SGM Giotto Spot 400 (thanks to Mihai Andrei)
+  * New fixture: Pulse LEDBAR 320 (thanks to Allan Rhynas)
+  * New fixture: Equinox Swing Batten (thanks to Dean Clough)
+  * New fixture: Cameo Pixbar 600 PRO, Chauvet COLORado 1 Quad Zoom Tour (thanks to Andrew Hallmark)
+  * New fixture: Involight FM900 DMX (thanks to Jászberény Szabolcs)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Sep 2016 12:13:14 +0200
 
