--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,7 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixtures: Showtec Phantom 95 LED Spot, Futurelight PHS-260 (thanks to Piotr Nowik)
   * New fixture: Blizzard Lighting Rocklite RGBAW (thanks to Larry Wall)
   * New fixture: American DJ Comscan LED (thanks to Chris)
-  * New fixture: PR Lighting XL 250 PR-2225M (thanks to István Király)
+  * New fixtures: PR Lighting XL 250/XL 700 Wash/XL 700 Spot, American DJ Accu Fog 1000 (thanks to István Király)
   * New fixtures: Equinox Ultra Scan LED, Kam Powercan84W, QTX HZ-3 (thanks to Chris Moses)
   * New fixture: Eurolite TMH-10 (thank to exmatrikulator)
   * New fixture: Eurolite LED SLS 5 BCL, Robe Fog 1500 FT (thanks to Christian Hollbjär)
@@ -36,6 +36,12 @@ qlcplus (4.10.5) stable; urgency=low
   * New fixture: Equinox Swing Batten (thanks to Dean Clough)
   * New fixture: Cameo Pixbar 600 PRO, Chauvet COLORado 1 Quad Zoom Tour (thanks to Andrew Hallmark)
   * New fixture: Involight FM900 DMX (thanks to Jászberény Szabolcs)
+  * New fixture: Showtec Stage Blinder Series (thanks to Antoni J. Canós)
+  * New fixture: MARQ Gamut PAR H7 (thanks to Lance Lyda)
+  * New fixtures: Chauvet: SlimPAR QUV12 USB, SlimPAR PRO H USB, Scorpion Bar RG (thanks to Pete Mueller)
+  * New fixture: Stairville CLB8 Compact LED PAR System (thanks to Detlef Fossan)
+  * New fixture: Chauvet Cubix 2.0 (thanks to Jungle Jim)
+  * New fixture: Showtec Giant XL LED (thanks to Samuel Hofmann)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Sep 2016 12:13:14 +0200
 
