--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qlcplus (4.10.6) stable; urgency=low
 
+  * Plugins/DMX USB: fixed 4.10.5 regression preventing to receive data from PRO devices
+
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
 qlcplus (4.10.5a) stable; urgency=high
