Updated fixtures map and changelog
And fixed ADJ contributed fixture

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.10.6) stable; urgency=low
 
   * engine: fixed setting start/end color while a RGB Matrix is running
   * UI/RGBPanel: added panel direction (thanks to Raivis Rengelis)
+  * New fixture: American DJ FREQ 5 Strobe (thanks to Martin Bochenek)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
