--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qlcplus (4.10.6) stable; urgency=low
 
   * engine: fixed setting start/end color while a RGB Matrix is running
+  * engine: fixed crash when pausing a Show with an unavailable audio file
   * UI/RGBPanel: added panel direction (thanks to Raivis Rengelis)
   * UI/Simple Desk: fixed crash when changing values from a channel group in "fixtures view" mode
   * New fixture: American DJ FREQ 5 Strobe (thanks to Martin Bochenek)
