--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qlcplus (4.10.6) stable; urgency=low
   * UI/RGBPanel: added panel direction (thanks to Raivis Rengelis)
   * UI/Simple Desk: fixed crash when changing values from a channel group in "fixtures view" mode
   * Virtual Console/Slider: improved level monitoring with the possibility to act like a Simple Desk slider (see documentation)
+  * Virtual Console/Frame: fixed 4.10.5b regression disabling widgets when switching page in design mode
   * New fixture: American DJ FREQ 5 Strobe (thanks to Martin Bochenek)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
