4 new fixtures, 2 updated. See changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixtures: Martin Rush MH6 Wash, Cameo Studio PAR 64 RGBWA UV 12W (thanks to Piotr Nowik)
   * New fixture: ETEC Moving Spot 60E (thanks to Freasy)
   * New fixture: American DJ Punch LED Pro (thanks to Benedict Stein)
+  * New fixtures: Contest Mini-Head 10W, Contest Evora B2R (thanks to Fredje Gallon)
+  * New fixture: Robe DJ Scan 150 XT (thanks to Allan Madsen)
+  * New fixture: Futurelight PRO Slim PAR-12 HCL (thanks to Lukas Jähn)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
