1 new fixture, see changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixtures: Contest Mini-Head 10W, Contest Evora B2R (thanks to Fredje Gallon)
   * New fixture: Robe DJ Scan 150 XT (thanks to Allan Madsen)
   * New fixture: Futurelight PRO Slim PAR-12 HCL (thanks to Lukas Jähn)
+  * New fixture: Showtec XS-1W Mini Moving Beam (thanks to Habefaro)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
