--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ qlcplus (4.10.6) stable; urgency=low
   * Virtual Console/Cue List: improved linked crossfade to perform an additive blending between steps (see documentation)
   * Virtual Console: prevent unwanted feedbacks from widgets in inactive Frame pages (thanks to Lukas Jähn)
   * Virtual Console: fixed manual selection of input channels not considering Frame pages (thanks to Lukas Jähn)
+  * Web access: fixed VC Slider in percentage mode and inverted appearance (thanks to Bartosz Grabias)
+  * Web access: support VC Slider reduced range when in level mode
   * New fixture: American DJ FREQ 5 Strobe (thanks to Martin Bochenek)
   * New fixture: Martin Rush MH3 (thanks to Ed Middlebrooks)
   * New fixture: Eurolite LED ACS BAR-12 (thanks to Michael Horber)
