resources: another batch of 7 fixtures - see changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,13 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixture: Chauvet Swarm Wash FX (thanks to Stephen Olah)
   * New fixture: Clay Paky Alpha Spot HPE 575 (thanks to Rohmer)
   * New fixture: Robe LED Blinder 196LT (thanks to Tim Cullingworth)
+  * New fixture: Chauvet COLORband T3 USB (thanks to Ian Nault)
+  * New fixture: American DJ Dotz Matrix (thanks to Sam Brooks)
+  * New fixture: American DJ XS 400 (thanks to Jared)
+  * New fixture: Velleman VDP1500SM (thanks to Freddy Hoogstoel)
+  * New fixture: Chauvet Intimidator Spot 355Z IRC (thanks to Michael Clements)
+  * New fixture: CLF Tricolor Mini Par (thanks to Jaron Blazer)
+  * New fixture: Varytec LED Easy Move Mini Beam & Wash RGBW (thanks to Erik)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
