4 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,9 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixture: Chauvet Intimidator Spot 355Z IRC (thanks to Michael Clements)
   * New fixture: CLF Tricolor Mini Par (thanks to Jaron Blazer)
   * New fixture: Varytec LED Easy Move Mini Beam & Wash RGBW (thanks to Erik)
+  * New fixtures: Smoke Factory Tour-Hazer II, JB Systems Panther (thanks to Thierry Rodolfo)
+  * New fixture: American DJ LED Trispot (thanks to Patrick)
+  * New fixture: Contest STB-520 1500W Strobe (thanks to Robert Box)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
