vc/frame: use a constant for shortcuts base input source ID
Do not allow the page combo box to acquire keyboard focus
updated documentation
updated changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ qlcplus (4.10.6) stable; urgency=low
   * Virtual Console/Slider: improved level monitoring with the possibility to act like a Simple Desk slider (see documentation)
   * Virtual Console/Frame: fixed 4.10.5b regression disabling widgets when switching page in design mode
   * Virtual Console/Frame: fixed key controls not copied when cloning a frame (thanks to Lukas Jähn)
+  * Virtual Console/Frame: added the possibility to jump directly to a page and assign page names (thanks to Lukas Jähn)
   * Virtual Console/Cue List: improved linked crossfade to perform an additive blending between steps (see documentation)
   * Virtual Console: prevent unwanted feedbacks from widgets in inactive Frame pages (thanks to Lukas Jähn)
   * Virtual Console: fixed manual selection of input channels not considering Frame pages (thanks to Lukas Jähn)
