--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ qlcplus (4.10.6) stable; urgency=low
   * Virtual Console: fixed input profiles channels not honored on frame pages other than the first (thanks to Lukas Jähn)
   * Web access: fixed VC Slider in percentage mode and inverted appearance (thanks to Bartosz Grabias)
   * Web access: support VC Slider reduced range when in level mode
+  * Web access: improved getChannelsValues and added Simple Desk reset per-channel (sdResetChannel API)
   * New input profile: Zoom R16 (thanks to Benedict Stein)
   * New fixture: American DJ FREQ 5 Strobe (thanks to Martin Bochenek)
   * New fixture: Martin Rush MH3 (thanks to Ed Middlebrooks)
