Added 1 weird fixture with special capabilities
Most likely no one will ever use it, but it's helpful to test 2D/3D preview

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixture: Eurolite TMH-14 (thanks to Chris de Rock)
   * New fixture: Chauvet Scorpion Dual (thanks to Alan Chavis)
   * New fixture: American DJ Ultra Hex Bar 12 (thanks to Rhavin)
+  * New fixture: Equinox Photon
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
 
