--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qlcplus (4.10.6) stable; urgency=low
   * UI: enabled Alt key combinations on macOS to behave like other platforms (thanks to Matt Mayfield)
   * UI/RGB Panel: added panel direction (thanks to Raivis Rengelis)
   * UI/RGB Matrix Editor: allow the preview to run even in operate mode
+  * UI/Audio Editor: added the possibility to loop an audio file (thanks to Raivis Rengelis)
   * UI/Simple Desk: fixed crash when changing values from a channel group in "fixtures view" mode
   * Virtual Console: prevent unwanted feedbacks from widgets in inactive Frame pages (thanks to Lukas Jähn)
   * Virtual Console: fixed manual selection of input channels not considering Frame pages (thanks to Lukas Jähn)
@@ -64,7 +65,7 @@ qlcplus (4.10.6) stable; urgency=low
   * New fixture: American DJ Ultra Hex Bar 12 (thanks to Rhavin)
   * New fixture: Equinox Photon
 
- -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 5 Mar 2017 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Apr 2017 12:13:14 +0200
 
 qlcplus (4.10.5b) stable; urgency=high
 
