--- a/debian/changelog
+++ b/debian/changelog
@@ -45,7 +45,7 @@ qlcplus (4.11.0) stable; urgency=low
   * New fixture: Clay Paky Alpha Spot HPE 575 (thanks to Rohmer)
   * New fixture: Robe LED Blinder 196LT (thanks to Tim Cullingworth)
   * New fixture: Chauvet COLORband T3 USB (thanks to Ian Nault)
-  * New fixtures: American DJ Dotz Matrix, Martin Jem Compact Hazer Pro (thanks to Sam Brooks)
+  * New fixtures: American DJ Dotz Matrix, Martin Jem Compact Hazer Pro,Geni Mojo Spin Master Series (thanks to Sam Brooks)
   * New fixture: American DJ XS 400 (thanks to Jared)
   * New fixture: Velleman VDP1500SM (thanks to Freddy Hoogstoel)
   * New fixture: Chauvet Intimidator Spot 355Z IRC (thanks to Michael Clements)
@@ -69,6 +69,8 @@ qlcplus (4.11.0) stable; urgency=low
   * New fixture: Equinox Photon
   * New fixture: QTX MHS-60 (thanks to Nerijus Mongirdas)
   * New fixture: Eurolite LED TMH FE-600, MARQ Colormax Par64 (thanks to Klaus Muth)
+  * New fixture: Chauvet SlimPar Hex 6 (thanks to Yinon Sahar)
+  * New fixture: IMG Stageline PARL 20 DMX (thanks to Felix Pickenäcker)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Apr 2017 12:13:14 +0200
 
