resources: 4 new fixtures and more Chauvet gobos

--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,8 @@ qlcplus (4.11.0) stable; urgency=low
   * New fixture: American DJ Ikon Profile (thanks to Ham Sadler)
   * New fixture: HQ Power Aeron Wash 575, JB Systems Space Color Laser (thanks to Ricardo Mendes)
   * New fixture: American DJ VPar (thanks to Eric Eskam)
+  * New fixture: MARQ Gesture Beam/Wash 102 (thanks to John Yiannikakis)
+  * New fixtures: Chauvet COLORado 3P, Legend 330SR Spot, SlimPar HEX 3 (thanks to Kevin Zepp)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Apr 2017 12:13:14 +0200
 
