--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qlcplus (4.11.0) stable; urgency=low
 
   * engine: fixed setting start/end color while a RGB Matrix is running
   * engine: fixed crash when pausing a Show with an unavailable audio file
+  * engine: major rework of Sequences. Projects using them need to be migrated
   * UI: enabled Alt key combinations on macOS to behave like other platforms (thanks to Matt Mayfield)
   * UI/RGB Panel: added panel direction (thanks to Raivis Rengelis)
   * UI/Fixture Manager: added weight and power consumption information on fixtures/universe selection (Chris de Rock idea)
@@ -91,7 +92,7 @@ qlcplus (4.11.0) stable; urgency=low
   * New fixture: American DJ Stinger Spot (thanks to Jason R. Johnston)
   * New fixture: Stairville Blade Sting 8 RGBW Beam Mover
 
- -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Apr 2017 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sat, 24 Jun 2017 12:13:14 +0200
 
 qlcplus (4.10.5b) stable; urgency=high
 
