--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.11.1) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 27 Aug 2017 12:13:14 +0200
+
 qlcplus (4.11.0) stable; urgency=low
 
   * engine: fixed setting start/end color while a RGB Matrix is running
